[package]
name = "craft2"
version = "0.1.0"
edition = "2021"

[build]
# target = "wasm32-unknown-unknown"
target = "x86_64-pc-windows-msvc"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.7.0" }
serde = "1.0.*"
bincode = "1.3.1"
bevy_fly_camera = { version = "0.8.0" }

# [patch.crates-io]
# bevy = { git = "https://github.com/lwansbrough/bevy", branch = "view-uniform-change" }
