[package]
name = "craft2"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"

[[bin]]
name = "client"

[build]
target = "wasm32-unknown-unknown"
# target = "x86_64-pc-windows-msvc"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.12.0"
actix-telepathy = "0.4.1"
actix-broker = "0.4.1"
actix-rt = "2.7.0"
tokio = "1.17.0"
log = "0.4.16"
bevy = { version = "0.8.0" }
serde = "1.0.*"
bincode = "1.3.1"
# bevy_flycam = { version = "0.7.0" }
rand = "0.8.5"
portpicker = "0.1.1"
uuid = { version = "1.1.2", features = ["v4", "fast-rng"] }
azure_core = "0.3.0"
azure_storage = "0.4.0"
azure_data_tables = "0.4.0"
futures = "0.3.21"

# [patch.crates-io]
# bevy = { git = "https://github.com/lwansbrough/bevy", branch = "view-uniform-change" }
